#1 test(domain.performance/review): 공연, 후기 도메인 테스트 코드 작성
- 공연 도메인 테스트
  - 공연 목록
    - 공연 목록(카드)가 정상적으로 렌더링
    - 각 공연 목록(카드)에 필수 데이터가 올바르게 표시
    - 유형/카테고리 선택 시, 해당 조건에 맞는 필터링
    - 페이징 처리
      - 무한 스크롤(택1)
        - hasMore이 false라면, 하단 로더가 보이지 않음.
        - IntersectionObserver 작동 시, fetchNext 호출
        - isIntersecting이 false일 경우, fetchNext 호출x
      - 페이지 네이션(택2)
        - 첫/마지막 페이지에 이전/이후 버튼이 비활성화
        - 이전/이후 버튼 클릭 시, 페이지 변화

  - 공연 상세 목록
    - 공연 상세 정보인 필수 데이터가 올바르게 표시
    - 별점을 클릭하여, 0.5단위로 평가 가능
    - 성인 공연일 시, 19세 이용가 / 아닐 시, 전체 이용가로 구분

- 후기 도메인 테스트
  - 공연 리뷰 데이터가 불러와지는지 확인
  - 좋아요 수 20개 이상일 경우, BEST Review 뱃지 표시
  - 후기 폼 작성 시, 버튼이 활성화 / 공백&빈 값일 시, 버튼 비활성화
  - 작성자일 시, 수정/삭제 버튼 활성화
  - 수정 시, 이전에 입력한 폼 활성화
  - 작성/수정/삭제 정상 동작

Resolves: #1
See also: None

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,22 +6,25 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": ["src"]
 }
