#5 test(domain.reservation): 좌석 예약 도메인 테스트 코드 작성
- 좌석 상태에 따른 backgroundColor 색상 변경(열린 좌석/닫힌 좌석/좌석 선택)
- 페이지 접근 후, 접근 시간이 600초 이후, 즉 만료 되면 페이지 경고창 & 리다이렉트
- 좌석 선택/해제 시, 실시간으로 총 금액이 반영
- 공연 ID에 해당하는 공연 정보 & 공연 선택 날짜 & 공연 선택 시간이 렌더링
- 공연 ID에 해당하는 좌석정보 렌더링
- 구역 별로 좌석의 가격이 정확히 적용되여 총 금액에 반영
- 좌석은 최대 4개까지 선택 가능하며, 5개 이상 선택 시, 경고 알림
- 폴더 구조 변경 (Component / Pages 명확히 구분)
- 필요 라이브러리 추가 (react-router-dom)

Resolves: #5
See also: None

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,8 @@
     "noUncheckedSideEffectImports": true,
     "types": [
       "jest",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "node"
     ]
   },
   "include": [
