--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
@@ -47,6 +48,7 @@
     "jest-environment-jsdom": "^30.0.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-router-dom": "^7.7.0",
     "recoil": "^0.7.7",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
