--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  }
+  },
+  "proxy": "https://kapi.kakao.com"
 }
