#21 feat(domain.performance):관람일정 & 좌석 선택 페이지, 성인판별 모달 UI 구현 - 관람일정 & 좌석 선택 페이지 UI 구현하였습니다. - 성인판별 모달 UI 구현하였습니다. - 모달을 구현하기 위한 Headless UI 라이브러리 install 하였습니다.
Resolves: #21
See also: None

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch --passWithNoTests"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.2.10"
