--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "msw": "^2.10.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "recoil": "^0.7.7",
     "tailwindcss": "^4.1.11",
@@ -58,5 +60,10 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   },
-  "proxy": "https://kapi.kakao.com"
+  "proxy": "https://kapi.kakao.com",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
