--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recoil-persist": "^5.1.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
