--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,7 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": false,
     "types": [
       "jest",
       "@testing-library/jest-dom",
