#44 chore: CI/CD 워크플로우 수정 & 패키지 설치
- jest.config.ts를 읽기 위해, ts-node 패키지 설치
- script의 test / test:ci로, 로컬 개발/CI 환경 구분

Resolves: #44
See also: None

--- a/.github/workflows/preview-cicd.yml
+++ b/.github/workflows/preview-cicd.yml
@@ -45,7 +45,7 @@ jobs:
 
       # pnpm test로 테스트를 실행합니다.
       - name: Test
-        run: pnpm test
+        run: pnpm test:ci
 
   # project-build가 성공적으로 실행된다면, 다음 deploy-to-vercel이 실행됩니다.
   deploy-to-vercel:
