--- a/.github/workflows/production-cicd.yml
+++ b/.github/workflows/production-cicd.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm run build
 
       - name: Test
-        run: pnpm test
+        run: pnpm test:ci
 
   deploy-to-vercel:
     runs-on: ubuntu-latest
