#44 chore: CI/CD 워크플로우 & 코드 수정
- preview CI/CD 수정
  - install-cache 추가
    - pnpm store 캐시 + node_modules 캐시 사전 준비
  - lint-format 추가
    - ESlint + Prettier 규칙 준수 확인
  - type-check 추가
    - 타입 체크 수행
  - CD 내용 임시 삭제

- Production CI/CD 수정
  - CD 내용 임시 삭제

- ESLint 규칙에 맞도록 코드 수정

- package.json script 내용 추가
  - lint & format & typecheck 추가

- tanstack@v4/eslint 버전 충돌로 인한, rules 추가

Resolves: #44
See also: None

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --check .",
     "preview": "vite preview",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch --passWithNoTests",
-    "test:ci": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --runInBand"
+    "test:ci": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --runInBand",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
