--- a/.github/workflows/production-cd.yml
+++ b/.github/workflows/production-cd.yml
@@ -54,5 +54,4 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no \
               -J ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }}:${{ secrets.BASTION_PORT }} \
-              ${{ secrets.DAISY04_USER }}@${{ secrets.DAISY04_HOST }} \
-              sudo systemctl restart nextframe-uiux
+              ${{ secrets.DAISY04_USER }}@${{ secrets.DAISY04_HOST }}
