--- a/.github/workflows/production-cd.yml
+++ b/.github/workflows/production-cd.yml
@@ -34,6 +34,13 @@ jobs:
 
       - name: Generate build
         run: pnpm build
+        env:
+          VITE_TOSS_CLIENT_KEY: ${{ secrets.VITE_TOSS_CLIENT_KEY }}
+          VITE_KAKAO_JAVASCRIPT_KEY: ${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
+          VITE_KAKAO_REDIRECT_KEY: ${{ secrets.VITE_KAKAO_REDIRECT_KEY }}
+          VITE_BACKEND_SRT_API: ${{ secrets.VITE_BACKEND_SRT_API }}
+          VITE_BACKEND_PAYMENT_API: ${{ secrets.VITE_BACKEND_PAYMENT_API }}
+          VITE_ENABLE_MSW: ${{ secrets.VITE_ENABLE_MSW }}
 
       - name: SSH Agent 셋업
         uses: webfactory/ssh-agent@v0.9.0
