fix: /dist 경로 중복 방지 - APP_DIR 경로 변경

--- a/.github/workflows/production-cd.yml
+++ b/.github/workflows/production-cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      APP_DIR: "/var/www/nextframe-uiux/dist/"
+      APP_DIR: "/var/www/nextframe-uiux"
       DIST_DIR: "./dist"
     strategy:
       matrix:
