--- a/.github/workflows/production-ci.yml
+++ b/.github/workflows/production-ci.yml
@@ -34,3 +34,37 @@ jobs:
 
       - name: Test
         run: pnpm test:ci
+
+      - name: Verify .env file
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          if ! ls dist >/dev/null 2>&1; then
+            echo "dist directory not found!" >&2
+            exit 1
+          fi
+
+          if [ ! -f .env ]; then
+            echo ".env file not found!" >&2
+            exit 1
+          fi
+
+          while IFS = read -r line || [ -n "$line" ]; do
+          [[ "$line" =~ ^[[:space:]]*# ]] && continue
+          [[ -z "$line" ]] && continue
+          if [[ "$line" =~ ^(VITE_[A-Za-z0-9_]+)=(.*)$ ]]; then
+            key="${BASH_REMATCH[1]}"
+            val="${BASH_REMATCH[2]}"
+
+            if [ -z "$val" ]; then
+              echo "Error: $key is empty value" >&2
+              exit 1
+            fi
+
+            if ! grep -qF -- "$val" dist/assets/*.js 2>/dev/null; then
+              echo "$key not found in build output" >&2
+              exit 1
+            fi
+          fi
+            done < .env
