#78 bug(cicd): Preview-ci, Production-ci 오타 수정
Resolves: #78
See also: None

--- a/.github/workflows/production-ci.yml
+++ b/.github/workflows/production-ci.yml
@@ -33,13 +33,13 @@ jobs:
       - name: Create .env from GitHub Secrets
         run: |
           cat <<EOF > .env
-            VITE_TOSS_CLIENT_KEY: ${{ secrets.VITE_TOSS_CLIENT_KEY }}
-            VITE_TOSS_REDIRECT_KEY: ${{ secrets.VITE_TOSS_REDIRECT_KEY }}
-            VITE_TOSS_SECRET_KEY: ${{ secrets.VITE_TOSS_SECRET_KEY }}
-            VITE_KAKAO_JAVASCRIPT_KEY: ${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
-            VITE_KAKAO_REDIRECT_KEY: ${{ secrets.VITE_KAKAO_REDIRECT_KEY }}
-            VITE_BACKEND_SRT_API: ${{ secrets.VITE_BACKEND_SRT_API }}
-            VITE_BACKEND_PAYMENT_API: ${{ secrets.VITE_BACKEND_PAYMENT_API }}
+            VITE_TOSS_CLIENT_KEY=${{ secrets.VITE_TOSS_CLIENT_KEY }}
+            VITE_TOSS_REDIRECT_KEY=${{ secrets.VITE_TOSS_REDIRECT_KEY }}
+            VITE_TOSS_SECRET_KEY=${{ secrets.VITE_TOSS_SECRET_KEY }}
+            VITE_KAKAO_JAVASCRIPT_KEY=${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
+            VITE_KAKAO_REDIRECT_KEY=${{ secrets.VITE_KAKAO_REDIRECT_KEY }}
+            VITE_BACKEND_SRT_API=${{ secrets.VITE_BACKEND_SRT_API }}
+            VITE_BACKEND_PAYMENT_API=${{ secrets.VITE_BACKEND_PAYMENT_API }}
             EOF
 
       - name: Build
@@ -62,8 +62,10 @@ jobs:
             echo ".env file not found!" >&2
             exit 1
           fi
+          
+          line=""
 
-          while IFS = read -r line || [ -n "$line" ]; do
+          while IFS= read -r line || [ -n "$line" ]; do
           [[ "$line" =~ ^[[:space:]]*# ]] && continue
           [[ -z "$line" ]] && continue
           if [[ "$line" =~ ^(VITE_[A-Za-z0-9_]+)=(.*)$ ]]; then
