--- a/.github/workflows/production-ci.yml
+++ b/.github/workflows/production-ci.yml
@@ -1,4 +1,3 @@
-# develop -> main에 PR 할 때 사용되는 워크플로입니다.
 name: production-ci.yml
 
 on:
@@ -11,6 +10,17 @@ jobs:
     strategy:
       matrix:
         node-version: [20]
+
+    env:
+      VITE_TOSS_CLIENT_KEY: ${{ secrets.VITE_TOSS_CLIENT_KEY }}
+      VITE_TOSS_REDIRECT_KEY: ${{ secrets.VITE_TOSS_REDIRECT_KEY }}
+      VITE_TOSS_SECRET_KEY: ${{ secrets.VITE_TOSS_SECRET_KEY }}
+      VITE_KAKAO_JAVASCRIPT_KEY: ${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
+      VITE_KAKAO_REDIRECT_KEY: ${{ secrets.VITE_KAKAO_REDIRECT_KEY }}
+      VITE_BACKEND_SRT_API: ${{ secrets.VITE_BACKEND_SRT_API }}
+      VITE_BACKEND_PAYMENT_API: ${{ secrets.VITE_BACKEND_PAYMENT_API }}
+      VITE_ENABLE_MSW: ${{ secrets.VITE_ENABLE_MSW }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,18 +39,30 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      # Secrets에서 .env 파일 생성
-      - name: Create .env from GitHub Secrets
+      # ✅ GitHub Secrets 정상 주입 여부 확인
+      - name: Check GitHub Secrets
+        shell: bash
         run: |
-          cat <<EOF > .env
-            VITE_TOSS_CLIENT_KEY=${{ secrets.VITE_TOSS_CLIENT_KEY }}
-            VITE_TOSS_REDIRECT_KEY=${{ secrets.VITE_TOSS_REDIRECT_KEY }}
-            VITE_TOSS_SECRET_KEY=${{ secrets.VITE_TOSS_SECRET_KEY }}
-            VITE_KAKAO_JAVASCRIPT_KEY=${{ secrets.VITE_KAKAO_JAVASCRIPT_KEY }}
-            VITE_KAKAO_REDIRECT_KEY=${{ secrets.VITE_KAKAO_REDIRECT_KEY }}
-            VITE_BACKEND_SRT_API=${{ secrets.VITE_BACKEND_SRT_API }}
-            VITE_BACKEND_PAYMENT_API=${{ secrets.VITE_BACKEND_PAYMENT_API }}
-            EOF
+          set -euo pipefail
+          CHECK_VARS=(
+            VITE_TOSS_CLIENT_KEY
+            VITE_TOSS_REDIRECT_KEY
+            VITE_TOSS_SECRET_KEY
+            VITE_KAKAO_JAVASCRIPT_KEY
+            VITE_KAKAO_REDIRECT_KEY
+            VITE_BACKEND_SRT_API
+            VITE_BACKEND_PAYMENT_API
+          )
+
+          for key in "${CHECK_VARS[@]}"; do
+            val="${!key:-}"
+            if [ -z "$val" ]; then
+              echo "❌ $key is NOT set or empty" >&2
+              exit 1
+            else
+              echo "✅ $key is set"
+            fi
+          done
 
       - name: Build
         run: pnpm run build
@@ -48,7 +70,8 @@ jobs:
       - name: Test
         run: pnpm test:ci
 
-      - name: Verify .env file
+      # ✅ Secrets가 빌드 결과에 반영됐는지 검증
+      - name: Verify GitHub Secrets injection
         shell: bash
         run: |
           set -euo pipefail
@@ -58,28 +81,27 @@ jobs:
             exit 1
           fi
 
-          if [ ! -f .env ]; then
-            echo ".env file not found!" >&2
-            exit 1
-          fi
+          CHECK_VARS=(
+            VITE_TOSS_CLIENT_KEY
+            VITE_TOSS_REDIRECT_KEY
+            VITE_TOSS_SECRET_KEY
+            VITE_KAKAO_JAVASCRIPT_KEY
+            VITE_KAKAO_REDIRECT_KEY
+            VITE_BACKEND_SRT_API
+            VITE_BACKEND_PAYMENT_API
+          )
 
-          line=""
-
-          while IFS= read -r line || [ -n "$line" ]; do
-          [[ "$line" =~ ^[[:space:]]*# ]] && continue
-          [[ -z "$line" ]] && continue
-          if [[ "$line" =~ ^(VITE_[A-Za-z0-9_]+)=(.*)$ ]]; then
-            key="${BASH_REMATCH[1]}"
-            val="${BASH_REMATCH[2]}"
-
-            if [ -z "$val" ]; then
-              echo "Error: $key is empty value" >&2
+          for key in "${CHECK_VARS[@]}"; do
+            vals="${!key:-}"
+            if [ -z "$vals" ]; then
+              echo "❌ $key is empty value" >&2
               exit 1
             fi
 
-            if ! grep -qF -- "$val" dist/assets/*.js 2>/dev/null; then
-              echo "$key not found in build output" >&2
+            if ! grep -qF -- "$vals" dist/assets/*.js 2>/dev/null; then
+              echo "❌ $key not found in build output" >&2
               exit 1
             fi
-          fi
-            done < .env
+
+            echo "✅ $key found in build output"
+          done
